port: remove Java 10/16 language usages from item registry